# proper-noun-replacer

./: README.md  pyproject.toml
proper_noun_replacer/: main.py
