[tool.poetry]
name = "proper-noun-replacer"
version = "0.1.0"
description = ""
authors = ["yona3 <yonajs208@gmail.com>"]
readme = "README.md"
packages = [{include = "proper_noun_replacer"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
